# GRPC_POC

./: CMakeLists.txt  README.md  common.cmake  main.cpp  statusclient.cpp  statusserver.cpp
